# src/data/schemas/resetPassSchema.ts
@@ -1,0 +1,5 @@
+import Joi from "joi";
+
+export const resetPasswordSchema = Joi.object({
+    password: Joi.string().min(6).required(),
+});
